Fix: Updating the schema by removing array error in pqsql
